# civ6-mcp-fork-archive

./: .gitignore  .mcp.json  AGENTS.md  pyproject.toml
.agents/skills/: civ6-arena-live
.serena/: project.yml
.superpowers/sdd/: lua-injection-inventory.md
docs/: agent-arena-hybrid-driver-plan.md  arena-live-gate-cli-mcp-loading-issue.md
docs/plans/: 2026-07-04-arena-local-civ-context.md
docs/specs/: 2026-07-04-arena-local-civ-context-design.md
docs/superpowers/plans/: 2026-07-04-arena-review-fixes.md  2026-07-05-arena-local-civ-context-review-fixes.md  2026-07-05-arena-promotion-lever.md  (+17 more)
evals/: .env.example  civbench.py  runner.py
experiments/: ab-minimal-vs-standard.yaml  arena-behavior-3llm-slice3.yaml  gemma-strategy-ab-slice1-50r.yaml  gemma-strategy-ab-slice1.yaml  p2-attention-sleep-probe.yaml  p3-attention-wake-probe.yaml  p3a-attention-presleep.yaml  p3c-presleep-r2.yaml  p3e-presleep-r2-long.yaml  p4-attention-minirun.yaml  p4b-attention-minirun.yaml  smoke-rich-gemma.yaml
notebooks/: game_analysis.ipynb
scripts/: analyze.py  civbench_data.py  convex_sync.py  generate_sas_token.py  menu_audit.py  orchestrator.py  publish_hf_dataset.py
scripts/orchestrator/: dispatch.py  machine.py  state.py
scripts/publish_hf/: README.md  README_TEMPLATE.md  __init__.py  croissant.py  download.py  export_tables.py  hashing.py  push.py  validate.py
src/civ_mcp/: autosave.py  end_turn.py  game_launcher.py  game_lifecycle.py  game_over_watchdog.py  game_state.py  heartbeat.py  json_io.py  narrate.py  run_id.py  server.py  telemetry.py  version.py
tests/: test_advisor_budget.py  test_convex_sync.py  test_hang_recovery.py  test_json_io.py  test_live_probe_fixtures.py  test_lua_injection_hardening.py  test_parsers.py  test_run_id.py  test_save_scumming.py  test_set_city_production.py
tests/arena/: test_agent.py  test_analyze.py  test_arena_live_status_script.py  test_arena_wiring.py  test_attention.py  test_autoresolve.py  test_backends.py  test_briefing.py  test_budget.py  test_capabilities.py  test_cli_agent.py  test_config.py  test_coordinator.py  test_coordinator_router.py  test_cost.py  test_experiment.py  test_hook.py  test_memory.py  test_orphan_sweep.py  test_prompt_context.py  test_prompting.py  test_registry.py  test_server_tool_gates.py  test_task_tracker.py  test_transcript.py
web/: package.json
web/convex/: diary.ts  ingest.ts  schema.ts
(+69 files in other folders)
